--- a/content/craft/cursor-origin.mdx
+++ b/content/craft/cursor-origin.mdx
@@ -5,7 +5,12 @@ title: Cursor-origin background scale
 import { Media } from '../../app/craft/_/craft-media'
 import { cn } from '@/lib/utils'
 import Link from 'next/link'
-import { OriginAwareButton } from '@/app/craft/cursor-origin-button/button'
+import { 
+  OriginAwareButton, 
+  OriginAwareButton_Basic, 
+  OriginAwareButton_BasicWithPseudo,
+  OriginAwareButton_BasicWithPseudo_FixZIndex, 
+} from '@/app/craft/cursor-origin-button/button'
 
 I saw this post on my X timeline and was intrigued.
 
@@ -50,44 +55,6 @@ I also extended the effect to the `pointerleave` event; when the button is un-ho
 
 ## Code
 
-```typescript title="Sample TypeScript code"
-class Person {
-  name: string;
-  age: number;
-  city: string;
-
-  constructor(name: string, age: number, city: string) {
-    this.name = name;
-    this.age = age;
-    this.city = city;
-  }
-
-  greet(): string {
-    return `Hello, my name is ${this.name} and I am ${this.age} years old from ${this.city}.`;
-  }
-}
-
-// Function to update a person's age
-function updateAge(person: Person, newAge: number): void {
-  person.age = newAge;
-}
-
-// Function to change a person's city
-function changeCity(person: Person, newCity: string): void {
-  person.city = newCity;
-}
-
-// Instantiating a new Person object
-const person1 = new Person("Alice", 30, "New York");
-
-// Updating age and city
-updateAge(person1, 31);
-changeCity(person1, "Los Angeles");
-
-// Logging the updated person details
-console.log(person1.greet());
-```
-
 ```tsx
 <button
   type="button"
@@ -103,7 +70,7 @@ console.log(person1.greet());
   ref={(el) => {
     if (!el) return
 
-    function setCursorOrigin(el: HTMLElement, e: MouseEvent) {
+    function setCursorOrigin(el: HTMLElement, e: PointerEvent) {
       const { clientX, clientY } = e
 
       const { top, left, width, height } = el.getBoundingClientRect()
@@ -116,14 +83,160 @@ console.log(person1.greet());
       el.style.setProperty('--cursor-origin', `var(--x) var(--y)`)
     }
 
-    el.addEventListener('mouseenter', (e) => setCursorOrigin(el, e))
-    el.addEventListener('mouseleave', (e) => setCursorOrigin(el, e))
+    el.addEventListener('pointerenter', (e) => setCursorOrigin(el, e))
+    el.addEventListener('pointerleave', (e) => setCursorOrigin(el, e))
   }}
 >
   <ListFilterPlusIcon data-slot="icon" className="size-4 stroke-[2.25px]" />
   <span data-slot="text">Add filter</span>
 </button>
-
 ```
 
 ## Breakdown
+
+First, we can create the basic `button` element with the appropriate styling and content.
+
+<Frame>
+  <OriginAwareButton_Basic />
+</Frame>
+
+```tsx
+<button
+  type="button"
+  className={cn(
+    'font-sans font-[450] text-sm',
+    'flex items-center gap-2 h-9 px-3 rounded-xl',
+    'bg-sand-3 hover:bg-sand-4 text-sand-11 hover:text-sand-12',
+    'active:scale-97 active:bg-sand-4',
+    'transition-[color,background-color] duration-150 ease-out',
+  )}
+>
+  <ListFilterPlusIcon className="size-4 stroke-[2.25px]" />
+  <span>Add filter</span>
+</button>
+```
+
+Next, the main problem - how we do we <span className='text-blue-11 font-medium'>(1)</span> scale the background and do this <span className='text-blue-11 font-medium'>(2)</span> from a specific origin?
+
+Initially, I naively applied `transform-origin` on the background transition, which didn't really work.
+
+It seems like we need to treat the element's background as a separate element entirely and not only apply `transform-origin`, but also scale this element.
+
+Enter the `::before` pseudo-element.
+
+Let's try to replicate the basic button with a slight modification to use a pseudo-element for the background.
+
+<Frame>
+  <OriginAwareButton_BasicWithPseudo />
+</Frame>
+
+Whoops, seems like the pseudo-element is appearing on top of the button's contents.
+
+We can fix this by applying `z-index: 1` to the button's children. This can be done quickly with a direct child selector `*:z-1`... nice!
+
+<Frame>
+  <OriginAwareButton_BasicWithPseudo_FixZIndex />
+</Frame>
+
+```tsx
+<button
+  type="button"
+  className={cn(
+    'font-sans font-[450] text-sm',
+    'relative flex items-center gap-2 h-9 px-3 rounded-xl',
+    '*:z-1',
+    'text-sand-11 hover:text-sand-12',
+    'active:scale-97 active:bg-sand-4',
+    'transition-[color,scale] duration-150 ease-out',
+    'before:absolute before:inset-0',
+    'before:rounded-xl before:bg-sand-3',
+    'before:opacity-0 hover:before:opacity-100',
+    'before:transition-[opacity,background-color] before:ease-out before:duration-150',
+  )}
+>
+  <ListFilterPlusIcon className="size-4 stroke-[2.25px]" />
+  <span>Add filter</span>
+</button>
+
+```
+
+Now that we have our background rendered via pseudo-element, we can scale it from the cursor's origin of entry/exit.
+
+Before diving in, let's take a moment to review how `transform-origin` works:
+
+> `transform-origin` accepts one to three values that define the point around which a transform is applied. 
+> The first two values are the `x` and `y` positions, and optionally a third `z` value in 3D transforms. 
+> These values are offsets relative to the element’s border box. 
+
+You can use keywords (`left`, `center`, `right`, `top`, `bottom`), lengths (e.g. `20px`, `1rem`), or percentages. For our purposes, we need to be more specific than just keywords, since the cursor origin is dynamic.
+
+Now we can get started. First, we need to be able to detect the cursor's origin:
+
+```ts
+function setCursorOrigin(el: HTMLElement, e: PointerEvent) {
+  const { clientX, clientY } = e
+}
+```
+
+Now, let's compute the cursor's origin *relative* to the element's bounding box. We can store these as CSS variables `--x` and `--y` on the element.
+
+```ts
+const { clientX, clientY } = e
+
+const { top, left } = el.getBoundingClientRect()
+
+const x = clientX - left
+const y = clientY - top
+
+el.style.setProperty('--x', `${x}px`)
+el.style.setProperty('--y', `${y}px`)
+```
+
+Now, we can set `transform-origin` as `var(--x) var(--y)`.
+We again set this as a CSS variable, `--cursor-origin`, then set the `transform-origin` value by referencing this variable. 
+
+This completes our `setCursorOrigin` helper function, which I've chosen to define outside our component:
+
+```ts
+function setCursorOrigin(el: HTMLElement, e: PointerEvent) {
+  const { clientX, clientY } = e
+
+  const { top, left } = el.getBoundingClientRect()
+
+  const x = clientX - left
+  const y = clientY - top
+
+  el.style.setProperty('--x', `${x}px`)
+  el.style.setProperty('--y', `${y}px`)
+
+  el.style.setProperty('--cursor-origin', `var(--x) var(--y)`) // [!code highlight]
+}
+```
+
+Next, we wire up our `setCursorOrigin` function to the `pointerenter` and `pointerleave` events.
+For this, we can use a [callback ref](https://tkdodo.eu/blog/avoiding-use-effect-with-callback-refs#callback-refs).
+
+Finally, we set the `transform-origin` value by referencing our configured CSS variable.
+
+```tsx
+<button
+  className={cn(
+    // ...,
+    'before:origin-(--cursor-origin)',
+    // ...
+  )}
+  ref={(el) => {
+    if (!el) return
+    el.addEventListener('pointerenter', (e) => setCursorOrigin(el, e)) // [!code highlight]
+    el.addEventListener('pointerleave', (e) => setCursorOrigin(el, e)) // [!code highlight]
+  }}
+/>
+```
+
+We're done!
+
+## Thoughts
+
+This seems pretty useless on touchscreen devices.
+
+<div className='h-64' />
