--- a/content/craft/video-player.mdx
+++ b/content/craft/video-player.mdx
@@ -4,9 +4,12 @@ published_date: 2025-12-19
 ---
 
 import { VideoPlayer } from '@/app/craft/2025/video-player/video-player'
+import { VideoPlayer_v2 } from '@/app/craft/2025/video-player/video-player-v2'
 
-This is my attempt at re-creating Linear's beautiful video player, most notably used on the [Conversations on Quality](https://linear.app/quality) page.
+<VideoPlayer_v2
+    src="/craft/video-player/linear-quality-ep02.mp4"
+/>
 
 <VideoPlayer
-    src="https://static.linear.app/assets/web/quality/teaser-full.90D8F66A-6715-41C0-9BC0-74FCD0B1047C.mp4"
+    src="https://static.linear.app/assets/web/quality/karri-full.AF713586-8D7A-49BE-BB38-07CBF0A9C0F9.mp4"
 />
