--- a/content/craft/video-player.mdx
+++ b/content/craft/video-player.mdx
@@ -17,14 +17,22 @@ Here's a video player I made. The design is heavily inspired by Linear, with a f
 
 ## Linear
 
-### via Motion
-
-<VideoPlayer_Motion
-    src="https://static.linear.app/assets/web/quality/karri-full.AF713586-8D7A-49BE-BB38-07CBF0A9C0F9.mp4"
-/>
-
 ### via CSS transitions
 
 <VideoPlayer_v2
+    src="https://static.linear.app/assets/web/quality/karri-full.AF713586-8D7A-49BE-BB38-07CBF0A9C0F9.mp4"
+/>
+
+<VideoPlayer_v2
+    src="/los-angeles-timelapse.mp4"
+/>
+
+<VideoPlayer_v2
+    src="/gta-6-trailer-2.mp4"
+/>
+
+### via Motion
+
+<VideoPlayer_Motion
     src="https://static.linear.app/assets/web/quality/karri-full.AF713586-8D7A-49BE-BB38-07CBF0A9C0F9.mp4"
 />
