--- a/content/craft/video-player.mdx
+++ b/content/craft/video-player.mdx
@@ -20,6 +20,14 @@ Here's a video player I made. The design is heavily inspired by Linear, with a f
 ### via CSS transitions
 
 <VideoPlayer_v2
+  src="https://static.linear.app/assets/web/quality/teaser-full.90D8F66A-6715-41C0-9BC0-74FCD0B1047C.mp4"
+  captions={[
+    { src: "/linear-quality-teaser.captions.vtt", label: "English", srcLang: "en", default: true },
+  ]}
+/>
+
+
+<VideoPlayer_v2
     src="https://static.linear.app/assets/web/quality/karri-full.AF713586-8D7A-49BE-BB38-07CBF0A9C0F9.mp4"
 />
 
